2006-05-23  David Reveman  <davidr@novell.com>

	* plugins/water.c: GL_UNSIGNED_INT_8_8_8_8_REV as pixel data type on
	MSBFirst machines.

	* src/texture.c: Include config.h before compiz.h so that
	IMAGE_BYTE_ORDER is defined correctly. (bnc 178171)

	* include/compiz.h: Define LSBFirst, MSBFirst, IMAGE_BYTE_ORDER,
	BITMAP_BIT_ORDER. (bnc 178171)

2006-05-23  Dan Winship  <danw@novell.com>

	* plugins/switcher.c (switchToWindow): use ss->windows here as
	well so that multiple activeNum==0 windows don't get skipped.
	(switchTerminate): Remove the screen grab right away so that
	keystrokes don't get dropped. bnc 177650
	(switchPreparePaintScreen, switchPaintScreen,
	switchDonePaintScreen): update for that

2006-05-22  Dan Winship  <danw@novell.com>

	* src/window.c (moveResizeWindow): deal with both vertical and
	horizontal struts; but not when moving a dock window

	* plugins/switcher.c (switchHandleEvent): Check init_all binding
	before init, so you can bind "<Alt>" to init_all and so end up
	with "<Alt>Tab" being init_all rather than init (but with no way
	to get "init"...). bnc 173376

2006-05-21  David Reveman  <davidr@novell.com>

	* src/display.c (addDisplay): Select for button events on root windows.

	* configure.ac: Bump version to 0.0.11.

	* gnome/window-decorator/gnome-window-decorator.c: Fix shadow
	performance by separating the convolution filter into one vertical and
	one horizontal pass.

	* src/window.c (mapWindow): Give sync request on map another try, it
	seems to be working now.

	* src/window.c (addWindow): Allow XGetWindowAttributes to fail.
	(bnc 173416).

	* src/window.c (addWindow): Initialize managed to false. Set managed
	to true if widows is viewable.

	* src/event.c (handleEvent): Set managed to false when window
	transitions to withdrawn state.
	(handleEvent): Set managed to true when we get MapRequest.
	(handleEvent): Constrain configure request if window is managed.

	* include/compiz.h: Add "managed" variable that is true while